--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "filmstrip",
+  "name": "filmstrip-messages",
   "version": "1.0.0",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
