--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
+    "svg-injector": "^1.1.3"
   },
   "scripts": {
     "build": "rollup -c",
