--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "rollup-plugin-json": "^4.0.0",
     "sirv-cli": "^0.4.4",
     "svg-injector": "^1.1.3"
   },
